--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <p class="text-[#C5A059] uppercase tracking-widest text-xs mb-4 font-bold">Diferencial</p>
             <h2 class="text-3xl md:text-5xl font-serif mb-8">Meditação Guiada</h2>
-            <p class="text-lg text-white/90 leading-relaxed mb-12 max-w-2xl mx-auto">Após os exercícios, conduzimos você a um momento de relaxamento e meditação guiada, proporcionando bem-estar físico e mental para que deixe o studio leve, renovado.</p>
+            <p class="text-lg text-white/90 leading-relaxed mb-12 max-w-2xl mx-auto"Após as aulas, oferecemos momentos de relaxamento e meditação guiada. Uma experiência que promove bem-estar físico e mental, permitindo que você saia do studio renovado por completo.</p>
             <div class="flex flex-wrap justify-center gap-4">
                 <span class="px-6 py-2 bg-white/10 backdrop-blur-md rounded-full text-[10px] uppercase font-bold text-[#C5A059] border border-white/10">Exercícios</span>
                 <span class="px-6 py-2 bg-white/10 backdrop-blur-md rounded-full text-[10px] uppercase font-bold text-[#C5A059] border border-white/10">Meditação</span>
@@ -287,4 +287,5 @@
     </a>
 
 </body>
+
 </html>
